--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,5 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="main">
+    <blzrRakuten.Pages.Profile.ComanyProfile/>
     <blzrRakuten.Pages.Landing.Cover/>
 </div>
